--- a/src/app/main-page.html
+++ b/src/app/main-page.html
@@ -141,11 +141,39 @@
                 <div class="item1"></div>
                 <div class="item1"></div>
                 <div class="item1"></div>
+                <div class="item1"></div>
+                <div class="item1"></div>
+                <div class="item1"></div>
+                <div class="item1"></div>
+                <div class="item1"></div>
+                <div class="item1"></div>
+                <div class="item1"></div>
+                <div class="item1"></div>
+                <div class="item1"></div>
+                <div class="item1"></div>
+                <div class="item1"></div>
+                <div class="item1"></div>
+                <div class="item1"></div>
+                <div class="item1"></div>
+                <div class="item1"></div>
+                <div class="item1"></div>
             </article>
         </section>
         <section class="content-anime1">
             <h6 class="anime-title">Popular´s Anime</h6>
             <article class="anime-content-item2">
+                <div class="item2"></div>
+                <div class="item2"></div>
+                <div class="item2"></div>
+                <div class="item2"></div>
+                <div class="item2"></div>
+                <div class="item2"></div>
+                <div class="item2"></div>
+                <div class="item2"></div>
+                <div class="item2"></div>
+                <div class="item2"></div>
+                <div class="item2"></div>
+                <div class="item2"></div>
                 <div class="item2"></div>
                 <div class="item2"></div>
                 <div class="item2"></div>
