--- a/src/app/main-page.html
+++ b/src/app/main-page.html
@@ -131,13 +131,14 @@
     <!-- main content -->
     <main class="content-main" id="main">
         <aside class="aside-content1">
-
+            <div class="legion"></div>
         </aside>
         <section class="content-anime">
             <h6 class="anime-title">New´s Anime</h6>
             <article class="anime-content-item1">
-                <div class="item1"></div>
-                <div class="item1"></div>
+                <div class="item1">
+                    <a href="" class="link-item1"></a>
+                </div>
                 <div class="item1"></div>
                 <div class="item1"></div>
                 <div class="item1"></div>
@@ -178,12 +179,10 @@
                 <div class="item2"></div>
                 <div class="item2"></div>
                 <div class="item2"></div>
-                <div class="item2"></div>
-                <div class="item2"></div>
             </article>
         </section>
         <aside class="aside-content2">
-
+            <div class="legion"></div>
         </aside>
     </main>
     <!-- footer the page -->
