--- a/src/app/main-page.html
+++ b/src/app/main-page.html
@@ -136,8 +136,17 @@
         <section class="content-anime">
             <h6 class="anime-title">New´s Anime</h6>
             <article class="anime-content-item1">
-                <div class="item1">
-                    <a href="" class="link-item1"></a>
+                <div class="item1" id="card">
+                    <a href="#" class="link-item1">
+                        <div class="link-info"></div>
+                        <div class="link-play"></div>
+                        <div class="link-title">
+                            <strong>Boku no pico</strong>
+                        </div>
+                        <span class="play">
+                            <i class="medium material-icons">play_circle_outline</i>
+                        </span>
+                    </a>
                 </div>
                 <div class="item1"></div>
                 <div class="item1"></div>
@@ -157,7 +166,7 @@
                 <div class="item1"></div>
                 <div class="item1"></div>
                 <div class="item1"></div>
-                <div class="item1"></div>
+                
             </article>
         </section>
         <section class="content-anime1">
@@ -181,9 +190,9 @@
                 <div class="item2"></div>
             </article>
         </section>
-        <aside class="aside-content2">
+        <!-- <aside class="aside-content2">
             <div class="legion"></div>
-        </aside>
+        </aside> -->
     </main>
     <!-- footer the page -->
     <footer class="content-footer" id="footer">
