--- a/src/app/main-page.html
+++ b/src/app/main-page.html
@@ -137,54 +137,73 @@
             <h6 class="anime-title">New´s Anime</h6>
             <article class="anime-content-item1">
                 <div class="item1" id="card">
+                    <span class="shadow-item1"></span>
                     <a href="#" class="link-item1">
                         <div class="link-info"></div>
                         <div class="link-play"></div>
                         <div class="link-title">
-                            <strong>Boku no pico</strong>
+                            <strong>Yatogame-chan kans</strong>
                         </div>
                         <span class="play">
                             <i class="medium material-icons">play_circle_outline</i>
                         </span>
                     </a>
                 </div>
-                <div class="item1"></div>
-                <div class="item1"></div>
-                <div class="item1"></div>
-                <div class="item1"></div>
-                <div class="item1"></div>
-                <div class="item1"></div>
-                <div class="item1"></div>
-                <div class="item1"></div>
-                <div class="item1"></div>
-                <div class="item1"></div>
-                <div class="item1"></div>
-                <div class="item1"></div>
-                <div class="item1"></div>
-                <div class="item1"></div>
-                <div class="item1"></div>
-                <div class="item1"></div>
-                <div class="item1"></div>
-                <div class="item1"></div>
-                
+                <div class="item1" id="card">
+                    <span class="shadow-item1"></span>
+                    <a href="#" class="link-item1">
+                        <div class="link-info"></div>
+                        <div class="link-play"></div>
+                        <div class="link-title">
+                            <strong>Yatogame-chan kans</strong>
+                        </div>
+                        <span class="play">
+                            <i class="medium material-icons">play_circle_outline</i>
+                        </span>
+                    </a>
+                </div>
+                <div class="item1" id="card">
+                    <span class="shadow-item1"></span>
+                    <a href="#" class="link-item1">
+                        <div class="link-info"></div>
+                        <div class="link-play"></div>
+                        <div class="link-title">
+                            <strong>Yatogame-chan kans</strong>
+                        </div>
+                        <span class="play">
+                            <i class="medium material-icons">play_circle_outline</i>
+                        </span>
+                    </a>
+                </div>
+                <div class="item1" id="card">
+                    <span class="shadow-item1"></span>
+                    <a href="#" class="link-item1">
+                        <div class="link-info"></div>
+                        <div class="link-play"></div>
+                        <div class="link-title">
+                            <strong>Yatogame-chan kans</strong>
+                        </div>
+                        <span class="play">
+                            <i class="medium material-icons">play_circle_outline</i>
+                        </span>
+                    </a>
+                </div>
             </article>
         </section>
         <section class="content-anime1">
             <h6 class="anime-title">Popular´s Anime</h6>
             <article class="anime-content-item2">
-                <div class="item2"></div>
-                <div class="item2"></div>
-                <div class="item2"></div>
-                <div class="item2"></div>
-                <div class="item2"></div>
-                <div class="item2"></div>
-                <div class="item2"></div>
-                <div class="item2"></div>
-                <div class="item2"></div>
-                <div class="item2"></div>
-                <div class="item2"></div>
-                <div class="item2"></div>
-                <div class="item2"></div>
+                <div class="item2">
+                    <a href="#" class="link-item2">
+                        <div class="img-item2">
+                            <span class="shadow-item2"></span>
+                            <span class="play">
+                                <i class="medium material-icons">play_circle_outline</i>
+                            </span>
+                        </div>
+                        <div class="title-item2">Yatogame-chan Kansatsu Nikki Sansatsume</div>
+                    </a>
+                </div>
                 <div class="item2"></div>
                 <div class="item2"></div>
                 <div class="item2"></div>
