--- a/src/app/main-page.html
+++ b/src/app/main-page.html
@@ -203,10 +203,60 @@
                         </div>
                         <div class="title-item2">Yatogame-chan Kansatsu Nikki Sansatsume</div>
                     </a>
+                    <span class="icon-item2">
+                        <i class="material-icons">favorite_border</i>
+                        <i class="material-icons">turned_in_not</i>
+                        <i class="material-icons">info_outline</i>
+                    </span>
                 </div>
-                <div class="item2"></div>
-                <div class="item2"></div>
-                <div class="item2"></div>
+                <div class="item2">
+                    <a href="#" class="link-item2">
+                        <div class="img-item2">
+                            <span class="shadow-item2"></span>
+                            <span class="play">
+                                <i class="medium material-icons">play_circle_outline</i>
+                            </span>
+                        </div>
+                        <div class="title-item2">Yatogame-chan Kansatsu Nikki Sansatsume</div>
+                    </a>
+                    <span class="icon-item2">
+                        <i class="material-icons">favorite_border</i>
+                        <i class="material-icons">turned_in_not</i>
+                        <i class="material-icons">info_outline</i>
+                    </span>
+                </div>
+                <div class="item2">
+                    <a href="#" class="link-item2">
+                        <div class="img-item2">
+                            <span class="shadow-item2"></span>
+                            <span class="play">
+                                <i class="medium material-icons">play_circle_outline</i>
+                            </span>
+                        </div>
+                        <div class="title-item2">Yatogame-chan Kansatsu Nikki Sansatsume</div>
+                    </a>
+                    <span class="icon-item2">
+                        <i class="material-icons">favorite_border</i>
+                        <i class="material-icons">turned_in_not</i>
+                        <i class="material-icons">info_outline</i>
+                    </span>
+                </div>
+                <div class="item2">
+                    <a href="#" class="link-item2">
+                        <div class="img-item2">
+                            <span class="shadow-item2"></span>
+                            <span class="play">
+                                <i class="medium material-icons">play_circle_outline</i>
+                            </span>
+                        </div>
+                        <div class="title-item2">Yatogame-chan Kansatsu Nikki Sansatsume</div>
+                    </a>
+                    <span class="icon-item2">
+                        <i class="material-icons">favorite_border</i>
+                        <i class="material-icons">turned_in_not</i>
+                        <i class="material-icons">info_outline</i>
+                    </span>
+                </div>
             </article>
         </section>
         <!-- <aside class="aside-content2">
