--- a/src/app/assets/css/style-main.css
+++ b/src/app/assets/css/style-main.css
@@ -327,11 +327,12 @@ body{
     font-size: 48px !important;
 }
 .item2{
-    width: 21%;
-    height: 300px;
+    position: relative;
+    width: 22%;
+    height: 320px;
     margin: 12px auto;
     border-radius: 6px;
-    border: .2px solid #bbbbbb;
+    border: 1px solid #bbbbbb;
     transition-property: transform, box-shadow;
     transition-duration: 200ms;
 }
@@ -352,13 +353,12 @@ body{
     grid-row: 1/2;
     position: relative;
     width: 94%;
-    height: 96%;
+    height: 90%;
     margin: 6px auto;
     background-image: url(/src/app/assets/img/boku.jpg);
-    background-size: 100% 100%;
+    background-size:100% 100%;
     background-repeat: no-repeat;
     background-position: center;
-    background-origin:border-box;
     border-radius: 6px;
 }
 .shadow-item2{
@@ -378,7 +378,20 @@ body{
     overflow:hidden;
 }
 .link-item2:hover{
-    color: #5a00c0;
+    color: #6b00e6;
+}
+.icon-item2{
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    padding: 2px;
+    background-color: #2b2b2ba8;
+} 
+.icon-item2 i{
+    color: #ffffff;
+}
+.icon-item2 i:hover{
+    cursor: pointer;
 }
 .legion{
     width: 90%;
@@ -396,7 +409,7 @@ body{
     background-color: #462bc0;
 }
 /* media responsive for divices small */
-@media (min-width:100px) and (max-width:480px){
+@media (min-width:100px) and (max-width:440px){
     .waiting-title{
         font-size: 2rem;
     }
@@ -478,14 +491,23 @@ body{
         font-size: 20px;
     }
     .item2{
-        width: 70%;
-        height: 400px;
+        width: 74%;
+        height: 360px;
         background-color: #ffa600;
         margin: 8px auto;
     }
+    .img-item2{
+        width: 94%;
+        height: 90%;
+        margin: 6px auto;
+    }
+    .title-item2{
+        margin:2px 4px;
+        font-size: 16px;
+    }
 }
 /* media responcive for divices medium small */
-@media (min-width:481px) and (max-width:770px){
+@media (min-width:441px) and (max-width:720px){
     .waiting-title{
         font-size: 3rem;
     }
@@ -557,20 +579,20 @@ body{
         font-size: 2rem;
     }
     .item1{
-        width: 45%;
-        height: 240px;
+        width: 40%;
+        height: 180px;
         background-color: #f503a4;
         margin:8px auto;
     }
     .item2{
-        width: 45%;
-        height: 400px;
+        width: 40%;
+        height: 340px;
         background-color: #ffa600;
         margin: 8px auto;
     }
 }
 /* media responsive for divices medium */
-@media (min-width:771px) and (max-width:992px){
+@media (min-width:721px) and (max-width:992px){
     .waiting-title{
         font-size: 3rem;
     }
@@ -642,13 +664,13 @@ body{
         font-size: 2rem;
     }
     .item1{
-        width: 40%;
+        width: 44%;
         height: 160px;
         background-color: #f503a4;
         margin:8px auto;
     }
     .item2{
-        width: 40%;
+        width: 44%;
         height: 300px;
         background-color: #ffa600;
         margin: 8px auto;
