ubdate form dates

--- a/src/app/form-login.html
+++ b/src/app/form-login.html
@@ -35,17 +35,37 @@
             <div id="register">
                 <div class="title-area">
                     <p>Register</p>
+                    <button class="b-change">Go to Login</button>
                 </div>
                 <div class="date-area">
+                    <form action="#"  class="dates">
+                        <fieldset class="date1">
+                           <input type="text" class="d-input" placeholder="Name">
+                           <input type="text" class="d-input" placeholder="last name">
+                           <input type="text" class="d-input" placeholder="Name user">
+                        </fieldset>
+                        <fieldset class="date2">
 
+                        </fieldset>
+                        <fieldset class="date3">
+                            <button class="b-date3">Create</button>
+                        </fieldset>
+                    </form>
                 </div>
             </div>
-            <div id="login"></div>
+            <div id="login">
+                <div class="title-area">
+                    <p>Login</p>
+                    <button class="b-change">Go to Register</button>
+                </div>
+                <div class="date-area">
+                    <form action="" method="post">
+
+                    </form>
+                </div>
+            </div>
         </section>
     </main>
-    <footer class="footer-login">
-
-    </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script>
         M.AutoInit();
