--- a/src/app/assets/css/style-login.css
+++ b/src/app/assets/css/style-login.css
@@ -1,14 +1,16 @@
 *{
-    box-sizing: border-box;
+    box-sizing:border-box;
 }
+/* style and grid of the body */
 body{
-    background-image: #dbdbdb;
     width: 100%;
     height: 100vh;
+    background:linear-gradient(to right, #1d124e , #38045fdd);
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 68px 1fr 60px;
+    grid-template-rows: 68px 1fr;
 }
+/* style of the navbar */
 .container-nav{
     grid-column: 1/-1;
     grid-row: 1/2;
@@ -26,6 +28,7 @@ body{
     background-color: transparent;
     color: #868686;
 }
+/* style of the navbar mobile */
 #mobile-demo{
     background-color: #3219a5;
     width: 260px;
@@ -35,19 +38,23 @@ body{
     padding: 0px 20px;
     font-size: 18px;
 }
+/* style and grid of the main */
 .main-login{
     grid-column: 1/-1;
     grid-row: 2/3;
     display: flex;
     justify-content: center;
     align-items: center;
+    box-sizing:content-box;
 }
+/* style form */
 .form-area{
     width: 50%;
     height: 400px;
     border: 1px solid #9c9c9c;
-    border-radius: 20px;
+    border-radius: 16px;
 }
+/* style form1 */
 #register{
     width: 100%;
     height: 100%;
@@ -60,10 +67,11 @@ body{
     grid-column: 1/-1;
     grid-row: 1/2;
     display: flex;
+    position: relative;
     justify-content: flex-start;
     align-items: center;
-    background-color: #0cc01b;
-    border-radius: 18px 18px 0px 0px;
+    background-color: #07a514;
+    border-radius: 16px 16px 0px 0px;
 }
 .title-area p{
     font-size:28px;
@@ -71,14 +79,80 @@ body{
     color: #f1f1f1;
     margin: 0px 20px;
 }
+.b-change{
+    position: absolute;
+    right: 10%;
+    width: 22%;
+    height: 28px;
+    border-radius: 12px;
+    border: none;
+    background-color: #dfae0f;
+    color: #f1f1f1;
+}
+.b-change:active{
+    transform: scale(.9);
+}
+.b-change:focus{
+    background-color: #dfae0f;
+}
 .date-area{
     grid-column: 1/-1;
     grid-row: 2/-1;
 }
-.footer-login{
-    grid-column: 1/-1;
-    grid-row: 3/4;
+.dates{
+    display: grid;
     width: 100%;
-    height: 60px;
-    background-color: #4626d4;
+    height: 100%;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 60px;
+}
+.dates fieldset{
+    border: none;
+}
+.date1{
+    grid-column: 1/2;
+    grid-row: 1/2;
+    display: flex;
+    flex-wrap: wrap;
+}
+.d-input{
+    width: 31% !important;
+    margin: 1% !important;
+    color: #f1f1f1;
+}
+.date2{
+    grid-column: 1/2;
+    grid-row: 2/3;
+}
+.date3{
+    grid-column: 1/2;
+    grid-row: 3/4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.b-date3{
+    width: 80px;
+    height: 28px;
+    border: none;
+    border-radius: 8px;
+    color: #f1f1f1;
+    font-size: 16px;
+    background-color: #07a514;
+}
+.b-date3:active{
+    transform: scale(.9);
+}
+.b-date3:focus{
+    background-color: #07a514;
+}
+/* style form2  */
+#login{
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 16% 1fr;
+    display: none;
 }
