--- a/src/app/form-login.html
+++ b/src/app/form-login.html
@@ -22,30 +22,50 @@
                     <i class="material-icons">menu</i>
                 </a>
                 <ul class="right hide-on-med-and-down nav-menu">
-                    <li><a href="#" class="text-menu">Home</a></li>
+                    <li><a href="/src/app/main-page.html" class="text-menu">Home</a></li>
                 </ul>
             </div>
         </nav>
         <ul class="sidenav" id="mobile-demo">
-            <li><a href="#">Home</a></li>
+            <li><a href="/src/app/main-page.html">Home</a></li>
         </ul>
     </header>
     <main class="main-login">
         <section class="form-area">
-            <div id="register">
+            <div id="register" class="">
                 <div class="title-area">
                     <p>Register</p>
-                    <button class="b-change">Go to Login</button>
+                    <button class="b-change" id="change-button1">Go to Login</button>
                 </div>
                 <div class="date-area">
                     <form action="#"  class="dates">
                         <fieldset class="date1">
-                           <input type="text" class="d-input" placeholder="Name">
-                           <input type="text" class="d-input" placeholder="last name">
-                           <input type="text" class="d-input" placeholder="Name user">
+                            <div class="input-field" id="content-d">
+                                <input id="first_name" type="text" class="d-input" required>
+                                <label for="first_name">First Name</label>
+                            </div>
+                            <div class="input-field" id="content-d">
+                                <input id="last_name" type="text" class="d-input">
+                                <label for="last-name">Last name</label>
+                            </div>
+                            <div class="input-field" id="content-d">
+                                <input id="user-name" type="text" class="d-input" required>
+                                <label for="user-name">User name</label>
+                            </div>
                         </fieldset>
                         <fieldset class="date2">
-
+                            <div class="input-field" id="content-d">
+                                <input id="password" type="password" class="d-input">
+                                <label for="password">Password</label>
+                            </div>
+                            <div class="input-field" id="content-d">
+                                <input id="password-c" type="password" class="d-input">
+                                <label for="password-c">Confirm password</label>
+                            </div>
+                            <div class="input-field" id="content-d">
+                                <input id="email" type="email" class="d-input" required>
+                                <label for="email">e-mail</label>
+                            </div>
                         </fieldset>
                         <fieldset class="date3">
                             <button class="b-date3">Create</button>
@@ -53,22 +73,34 @@
                     </form>
                 </div>
             </div>
-            <div id="login">
+            <div id="login" class="">
                 <div class="title-area">
                     <p>Login</p>
-                    <button class="b-change">Go to Register</button>
+                    <button class="b-change" id="change-button2">Go to Register</button>
                 </div>
                 <div class="date-area">
-                    <form action="" method="post">
-
+                    <form action="" method="post" class="dates">
+                        <fieldset class="date1">
+                            <div class="input-field" id="content-d">
+                                <input id="email" type="email" class="d-input" required>
+                                <label for="email">e-mail</label>
+                            </div>
+                        </fieldset>
+                        <fieldset class="date2">
+                            <div class="input-field" id="content-d">
+                                <input id="password" type="password" class="d-input">
+                                <label for="password">Password</label>
+                            </div>
+                        </fieldset>
+                        <fieldset class="date3">
+                            <button class="b-date3">Login</button>
+                        </fieldset>
                     </form>
                 </div>
             </div>
         </section>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script>
-        M.AutoInit();
-    </script>
+    <script src="/src/app/assets/js/functions-login.js"></script>
 </body>
 </html>
