--- a/src/app/main-page.html
+++ b/src/app/main-page.html
@@ -123,7 +123,7 @@
                         <button type="submit" class="facebook">Log In with Facebook</button>
                     </div>
                 <div class="modal-footer">
-                    <a href="#">Register</a>
+                    <a href="/src/app/form-login.html">Register</a>
                     <a href="#">Forgot your password?</a>
                     <a href="#!" class="modal-close waves-effect btn-flat">Leave</a>
                 </div>
